# vapoursynth-temporalsoften2

./: meson.build  readme.rst
src/: temporalsoften2.c
